--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas
-numpy
-networkx
-scipy
-plotly
-openpyxl
+streamlit>=1.36
+pandas>=2.0
+numpy>=1.24
+networkx>=3.0
+scipy>=1.10
+plotly>=5.20
+openpyxl>=3.1
 xlrd
